--- a/notebook/Untitled.ipynb
+++ b/notebook/Untitled.ipynb
@@ -2,8 +2,270 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 119,
+   "id": "da376903-8917-4ac8-8550-c23a9c1f4c25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type: typing.Literal[42]\n",
+      "Origin: typing.Literal\n",
+      "Arguments: (42,)\n",
+      "\n",
+      "Type: <class 'int'>\n",
+      "Origin: None\n",
+      "Arguments: ()\n",
+      "\n",
+      "Type: typing.ClassVar[int]\n",
+      "Origin: typing.ClassVar\n",
+      "Arguments: (<class 'int'>,)\n",
+      "\n",
+      "Type: <class 'typing.Generic'>\n",
+      "Origin: <class 'typing.Generic'>\n",
+      "Arguments: ()\n",
+      "\n",
+      "Type: typing.Generic[~T]\n",
+      "Origin: <class 'typing.Generic'>\n",
+      "Arguments: (~T,)\n",
+      "\n",
+      "Type: typing.Union[~T, int]\n",
+      "Origin: typing.Union\n",
+      "Arguments: (~T, <class 'int'>)\n",
+      "\n",
+      "Type: list[tuple[int, int]]\n",
+      "Origin: <class 'list'>\n",
+      "Arguments: (tuple[int, int],)\n",
+      "\n",
+      "Type: typing.Annotated[str, '$']\n",
+      "Origin: <class 'typing.Annotated'>\n",
+      "Arguments: (<class 'str'>, '$')\n",
+      "\n",
+      "Type: typing.Generic[~T]\n",
+      "Origin: <class 'typing.Generic'>\n",
+      "Arguments: (~T,)\n",
+      "\n",
+      "Type: <enum 'HttpMethod'>\n",
+      "Origin: None\n",
+      "Arguments: ()\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import (\n",
+    "    Annotated,\n",
+    "    ClassVar,\n",
+    "    Generic,\n",
+    "    Literal,\n",
+    "    TypeAlias,\n",
+    "    TypeVar,\n",
+    "    Union,\n",
+    "    ParamSpec,\n",
+    ")\n",
+    "from typing import get_origin, get_args\n",
+    "from enum import Enum\n",
+    "\n",
+    "def get_info(type_in):\n",
+    "    \"\"\"\n",
+    "    Prints the origin and arguments of a type.\n",
+    "    \"\"\"\n",
+    "    print(f\"Type: {type_in}\")\n",
+    "    print(\"Origin:\", get_origin(type_in))\n",
+    "    print(\"Arguments:\", get_args(type_in))\n",
+    "    print()\n",
+    "\n",
+    "\n",
+    "P = ParamSpec(\"P\")\n",
+    "T = TypeVar(\"T\")\n",
+    "MyAlias: TypeAlias = Generic[T]\n",
+    "\n",
+    "class HttpMethod(str, Enum):\n",
+    "    GET = \"GET\"\n",
+    "    POST = \"POST\"\n",
+    "    PUT = \"PUT\"\n",
+    "    DELETE = \"DELETE\"\n",
+    "\n",
+    "# Test cases to print the results\n",
+    "get_info(Literal[42])\n",
+    "get_info(int)\n",
+    "get_info(ClassVar[int])\n",
+    "get_info(Generic)\n",
+    "get_info(Generic[T])\n",
+    "get_info(Union[T, int])\n",
+    "get_info(list[tuple[T, T]][int])\n",
+    "get_info(Annotated[str, \"$\"])\n",
+    "get_info(MyAlias)\n",
+    "get_info(HttpMethod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "id": "717a7f55-ab00-4f3c-8d44-8606cfb0a895",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import (\n",
+    "    Annotated,\n",
+    "    Any,\n",
+    "    ClassVar,\n",
+    "    Generic,\n",
+    "    Literal,\n",
+    "    Optional,\n",
+    "    ParamSpec,\n",
+    "    TypeAlias,\n",
+    "    TypeVar,\n",
+    "    Union,\n",
+    ")\n",
+    "from typing import get_origin, get_args\n",
+    "from enum import Enum\n",
+    "from types import UnionType, NoneType\n",
+    "import inspect\n",
+    "import dataclasses as dc\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "\n",
+    "# Custom Typing\n",
+    "class UnsetType:\n",
+    "    \"\"\"Utility for representing `Empty` values.\"\"\"\n",
+    "\n",
+    "    _instance: Optional[\"UnsetType\"] = None\n",
+    "\n",
+    "    # Type[\"UnsetType\"]\n",
+    "    def __new__(cls: Any) -> \"UnsetType\":\n",
+    "        if cls._instance is None:\n",
+    "            cls._instance = super().__new__(cls)\n",
+    "        return cls._instance\n",
+    "\n",
+    "    def __bool__(self) -> bool:\n",
+    "        return False\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return \"UNSET\"\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return \"\"\n",
+    "\n",
+    "\n",
+    "# Create a singleton instance\n",
+    "UNSET: UnsetType = UnsetType()\n",
+    "\n",
+    "\n",
+    "@dc.dataclass\n",
+    "class Field:\n",
+    "    annotation: Any\n",
+    "    origin: Any = None\n",
+    "    types: Any = None\n",
+    "    default: Any = UNSET\n",
+    "    required: bool = True\n",
+    "    is_union: bool = False\n",
+    "    is_choice: bool = False\n",
+    "\n",
+    "    def __post_init__(self) -> None:\n",
+    "        self.origin = get_origin(self.annotation)\n",
+    "        self.types = get_args(self.annotation)\n",
+    "        # Update if origin found\n",
+    "        if self.origin:\n",
+    "            self.required = NoneType not in self.types\n",
+    "            self.is_union = self.origin in (UnionType, Union)\n",
+    "            self.is_choice = self.origin is Literal\n",
+    "        # Remove NoneType\n",
+    "        if not self.required:\n",
+    "            self.types = tuple(x for x in self.types if x is not NoneType)\n",
+    "        # Single-Type\n",
+    "        if len(self.types) > 1 and self.is_union:\n",
+    "            raise ValueError(\n",
+    "                f\"Expected 1 type, but found {len(self.types)} types: {self.types}\"\n",
+    "            )\n",
+    "        # Real-Type\n",
+    "        if len(self.types) == 1 and self.is_union:\n",
+    "            real = Field(self.types[0])\n",
+    "            if real.is_choice:\n",
+    "                self.is_choice = True\n",
+    "                self.types = real.types\n",
+    "\n",
+    "\n",
+    "@dc.dataclass\n",
+    "class Inspector:\n",
+    "    object: Any\n",
+    "    info: inspect.Signature | None = None\n",
+    "    parameters: OrderedDict | None = None\n",
+    "\n",
+    "    def __post_init__(self) -> None:\n",
+    "        self.info = inspect.signature(self.object)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "id": "5580b1c5-d380-4112-8d9e-896f1a2a6d66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Field(annotation=typing.Optional[typing.Literal['one', 'two']], origin=typing.Union, types=('one', 'two'), default=UNSET, required=False, is_union=True, is_choice=True)"
+      ]
+     },
+     "execution_count": 281,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from typing import Literal, Union\n",
+    "from types import UnionType\n",
+    "import inspect\n",
+    "\n",
+    "def demo(x: Literal[\"one\", \"two\"] | None, y: Literal[\"one\", \"two\"] | None = None):\n",
+    "    pass\n",
+    "\n",
+    "signature = inspect.signature(demo)\n",
+    "params = signature.parameters\n",
+    "field = params.get(\"x\")\n",
+    "default_value = field.default\n",
+    "if default_value is inspect.Parameter.empty:\n",
+    "    default_value = UNSET\n",
+    "\n",
+    "field_info = Field(field.annotation)\n",
+    "field_info.default = default_value\n",
+    "field_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "id": "9c0e56c9-accc-43ea-a779-c756b32a9181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HttpEnum(str, Enum):\n",
+    "    GET = \"GET\"\n",
+    "    POST = \"POST\"\n",
+    "    PUT = \"PUT\"\n",
+    "    DELETE = \"DELETE\"\n",
+    "\n",
+    "class HttpNotEnum:\n",
+    "    GET = \"GET\"\n",
+    "    POST = \"POST\"\n",
+    "    PUT = \"PUT\"\n",
+    "    DELETE = \"DELETE\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "85850ddb-f609-467f-be7d-bad6618676e7",
+   "id": "3b67762f-0d46-4d72-88b8-4ef1704f625b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6a40bc4-0407-4135-a563-77edbad318c5",
    "metadata": {},
    "outputs": [],
    "source": []
